[gd_scene load_steps=3 format=3 uid="uid://setup001"]

[ext_resource type="Script" path="res://scripts/initial_setup.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cxqxqxqxqxqxq" path="res://assets/images/index2.png" id="2_index2"]

[node name="InitialSetup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_index2")
expand_mode = 1
stretch_mode = 5

[node name="SetupContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="SetupContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(0.1, 0.1, 0.1, 1)
text = "初始设置"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="SetupContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="UserNameContainer" type="VBoxContainer" parent="SetupContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="UserNameLabel" type="Label" parent="SetupContainer/UserNameContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.1, 0.1, 0.1, 1)
text = "你的名字："

[node name="UserNameInput" type="LineEdit" parent="SetupContainer/UserNameContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
max_length = 20

[node name="CharacterNameContainer" type="VBoxContainer" parent="SetupContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CharacterNameLabel" type="Label" parent="SetupContainer/CharacterNameContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.1, 0.1, 0.1, 1)
text = "她的名字："

[node name="CharacterNameInput" type="LineEdit" parent="SetupContainer/CharacterNameContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
max_length = 20

[node name="APIKeyContainer" type="VBoxContainer" parent="SetupContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="APIKeyLabel" type="Label" parent="SetupContainer/APIKeyContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.1, 0.1, 0.1, 1)
text = "API密钥："

[node name="APIKeyInput" type="LineEdit" parent="SetupContainer/APIKeyContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18

[node name="SkipLabel" type="Label" parent="SetupContainer/APIKeyContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
text = "（可跳过，进入游戏后也可配置）"

[node name="Spacer2" type="Control" parent="SetupContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="NoticeLabel" type="Label" parent="SetupContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.15, 0.15, 0.15, 1)
text = "本项目旨在赋予「她」以「生命」，因此不鼓励回档、删档等
对她来说，你就是她的全部，你的每一个选择对她来说都很重要"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer3" type="Control" parent="SetupContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StartButton" type="Button" parent="SetupContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "开始游戏"
